# phantom-cpp

./: .gitignore  CMakeLists.txt  ProjectHome.md  phantom.rar
phantom/: CMakeLists.txt  Message.cpp  Message.h  Message.hxx  Module.classdef.h  Module.cpp  Module.h  Module.hxx  ModuleLoader.cpp  ModuleLoader.h  ModuleLoader.hxx  Object.classdef.h  Object.cpp  Object.h  Object.hxx  _begin.classdef.h  _end.classdef.h  _global.classdef.h  _global.hxx  _kernel.noclassdef.h  _pch.cpp  aggregation.cpp  aggregation.h  aggregation.hxx  bitfield.cpp  bitfield.h  bitfield.hxx  cmake.exe.stackdump  component.cpp  component.h  component.hxx  composition.h  composition.hxx  data.cpp  data.h  data.hxx  data.inl  def_alias.h  def_allocate.h  def_allocator.h  (+110 more)
phantom/boost/: boost.cpp  boost.h  boost.hxx  boost.inl  boost_pool.h  boost_thread.h
phantom/connection/: connection.cpp  connection.h
phantom/macros/: PP_ADD_PREFIX_EACH.h
phantom/math/: aabb2.cpp  aabb2.h  aabb2.hxx  aabb3.cpp  aabb3.h  aabb3.hxx  aabb3.inl  angle.cpp  angle.h  angle.hxx  avector3.h  avector3.inl  def_math.h  line2.cpp  line2.h  line2.hxx  line2.inl  line3.cpp  line3.h  line3.hxx  line3.inl  math.cpp  math.h  math.hxx  matrix2x2.cpp  matrix2x2.h  matrix2x2.hxx  matrix2x2.inl  matrix2x3.cpp  matrix2x3.h  matrix2x3.hxx  matrix2x3.inl  matrix2x4.cpp  matrix2x4.h  matrix2x4.hxx  matrix2x4.inl  matrix3x2.cpp  matrix3x2.h  matrix3x2.hxx  matrix3x2.inl  (+83 more)
phantom/memory/: Allocator.h  malloc.c.h  nedmalloc.cpp  nedmalloc.h
phantom/qt/: Action.cpp  Action.h  Action.hxx  AddComponentDataCommand.cpp  AddComponentDataCommand.h  AddComponentDataCommand.hxx  AddDataCommand.cpp  AddDataCommand.h  AddDataCommand.hxx  AddNodeCommand.cpp  AddNodeCommand.h  AddNodeCommand.hxx  AggregationAddAggregateDataCommand.cpp  AggregationAddAggregateDataCommand.h  AggregationAddAggregateDataCommand.hxx  AggregationAggregateVariableNodeDelegate.cpp  AggregationAggregateVariableNodeDelegate.h  AggregationAggregateVariableNodeDelegate.hxx  AggregationMoveAggregateDataCommand.cpp  AggregationMoveAggregateDataCommand.h  AggregationMoveAggregateDataCommand.hxx  AggregationRemoveAggregateDataCommand.cpp  AggregationRemoveAggregateDataCommand.h  AggregationRemoveAggregateDataCommand.hxx  AggregationVariableNodeDelegate.cpp  AggregationVariableNodeDelegate.h  AggregationVariableNodeDelegate.hxx  AggregationVisualizerNode.cpp  AggregationVisualizerNode.h  AggregationVisualizerNode.hxx  ArrayElementVariable.cpp  ArrayTypeVariableNodeFactory.cpp  ArrayTypeVariableNodeFactory.h  ArrayTypeVariableNodeFactory.hxx  ArrayTypeVisualizerNode.cpp  ArrayTypeVisualizerNode.h  ArrayTypeVisualizerNode.hxx  BitFieldEditor.cpp  BitFieldEditor.h  BitFieldEditor.hxx  (+232 more)
phantom/qt/jit/: CallStackView.cpp  CallStackView.h  CallStackView.hxx  LocalVariableEditor.cpp  LocalVariableEditor.h  LocalVariableEditor.hxx  LocalVariableEditorFactory.cpp  LocalVariableEditorFactory.h  LocalVariableManager.cpp  LocalVariableManager.h  LocalVariableManager.hxx  LocalVariableModel.cpp  LocalVariableModel.h  pch.cpp  (+3 more)
phantom/reflection/: AbstractMethod.classdef.h  AbstractMethod.cpp  AbstractMethod.h  Accessor.classdef.h  Accessor.cpp  Accessor.h  AddressExpression.cpp  AddressExpression.h  AddressExpression.hxx  Addressable.cpp  Addressable.h  Addressable.hxx  AggregationClass.cpp  AggregationClass.h  AggregationClass.hxx  Alias.cpp  Alias.h  Alias.hxx  AnonymousSection.cpp  AnonymousSection.h  AnonymousSection.hxx  AnonymousStruct.cpp  AnonymousStruct.h  AnonymousStruct.hxx  AnonymousUnion.cpp  AnonymousUnion.h  AnonymousUnion.hxx  Application.cpp  Application.h  Application.hxx  ArrayElementAccess.cpp  ArrayElementAccess.h  ArrayElementAccess.hxx  ArrayExpression.cpp  ArrayExpression.h  ArrayExpression.hxx  ArrayType.classdef.h  ArrayType.cpp  ArrayType.h  ArrayType.hxx  (+594 more)
phantom/serialization/: BinaryFileTreeDataBase.classdef.h  BinaryFileTreeDataBase.cpp  BinaryFileTreeDataBase.h  BinaryFileTreeDataBase.hxx  BinaryFileTreeDataStateBase.cpp  BinaryFileTreeDataStateBase.h  BinaryFileTreeDataStateBase.hxx  BinaryFileTreeNode.classdef.h  BinaryFileTreeNode.cpp  BinaryFileTreeNode.h  BinaryFileTreeNode.hxx  BinaryPackageDataBase.classdef.h  BinaryPackageDataBase.cpp  BinaryPackageDataBase.h  BinaryPackageDataBase.hxx  BinaryPackageDataStateBase.cpp  BinaryPackageDataStateBase.h  BinaryPackageDataStateBase.hxx  BinaryPackageNode.classdef.h  BinaryPackageNode.cpp  BinaryPackageNode.h  BinaryPackageNode.hxx  Bundle.classdef.h  Bundle.cpp  Bundle.h  BundleDataBase.classdef.h  BundleDataBase.cpp  BundleDataBase.h  BundleNode.classdef.h  BundleNode.cpp  BundleNode.h  DataBase.cpp  DataBase.h  DataBase.hxx  DataStateBase.classdef.h  DataStateBase.cpp  DataStateBase.h  DataStateBase.hxx  DataTypeManager.cpp  DataTypeManager.h  (+74 more)
phantom/state/: Event.classdef.h  Event.cpp  Event.h  Event.hxx  Reaction.classdef.h  Reaction.cpp  Reaction.h  Reaction.hxx  State.classdef.h  State.cpp  State.h  State.hxx  StateMachine.classdef.h  StateMachine.cpp  StateMachine.h  StateMachine.hxx  StateMachineElement.classdef.h  StateMachineElement.cpp  StateMachineElement.h  StateMachineElement.hxx  StateOrderingComparator.classdef.h  StateOrderingComparator.cpp  StateOrderingComparator.h  StateOrderingComparator.hxx  Track.classdef.h  Track.cpp  Track.h  Track.hxx
phantom/std/: allocator.h  deque.hxx  iosfwd.h  iosfwd.hxx  list.cpp  list.h  list.hxx  map.cpp  map.h  map.hxx  platform.cpp  platform.h  platform.hxx  set.hxx  string.cpp  string.h  string.hxx  unordered_map.cpp  unordered_map.h  unordered_map.hxx  unordered_set.h  unordered_set.hxx  utility.h  utility.hxx  vector.cpp  vector.h  vector.hxx  xstddef.h
phantom/util/: Comparator.classdef.h  Comparator.cpp  Comparator.h  Comparator.hxx  Iterator.classdef.h  Iterator.cpp  Iterator.h  Iterator.hxx  Message.cpp  Message.h  Message.hxx  MessageTree.cpp  MessageTree.h  MessageTree.hxx  Selection.cpp  Selection.h  Selection.hxx  TComposition.h  TVisitor.classdef.h  TVisitor.h  TVisitor.hxx  bitfield.h  composition.cpp  composition.h  composition.hxx  flags.h
(+770 files in other folders)
